# Think_Strike

./: Dockerfile  GITHUB_ACTIONS_SETUP.md  LICENSE  README.md  RELEASE_NOTES.md  RUN_CHECKLIST.md  SUMMARY.md  docker-compose.yml  docker_all_in_one.bat  figma_prototype.txt  pubspec.yaml  pyproject.toml  requirements.txt
.github/workspaces/: ci.yml
backend/: Dockerfile  _build_tf_model.py  admin_routes.py  analytics_routes.py  auth.py  auth_utils.py  create_admin.py  crud.py  database.py  db.py  deps.py  env.example  main.py  models.py  quizzes.py  requirements.txt  security.py
backend/ai/: quiz_generator.py  tf_model.py
backend/models/: __init__.py  quiz.py
backend/routers/: __init__.py  admin.py  auth.py  quiz.py  student.py  teacher.py  users.py
backend/routes/: communication.py  teacher.py
backend/scripts/: build_tf_model.py
docs/test-quizzes/: c-basics-quiz.md  matrices-quiz.md
files/: CHANGELOG.md  IMPLEMENTATION.md  README.md  ROLES_AND_RESPONSIBILITIES.md  package.json
files/backend/: ai.py  ai_engine.py  database.py  main.py
files/frontend/: pubspec.yaml
files/scripts/: generate_docs.py
files/tests/: load_test.py
frontend/: Dockerfile  README.md  analysis_options.yaml  nginx.conf  pubspec.yaml
frontend/lib/: config.dart  main.dart  theme.dart
frontend/lib_old/: admin_dashboard.dart  admin_users.dart  glassmorphic_quiz_ui.dart  login.dart  main.dart  quiz_detail.dart  teacher_dashboard.dart  theme.dart
frontend/web/: index.html  manifest.json
scripts/: create_release.sh
tests/: final_test_suite.py  test_suite.py
(+52 files in other folders)
